@@ -61,7 +61,7 @@ correctly:
   * api.php, img_auth.php, index.php,opensearch_desc.php, profileinfo.php,
   redirect.php, thumb.php, trackback.php.  These are the entry points for
   normal usage.  This list may be incomplete and is subject to change.
-  * config/index.php: Used for web-based installation (sets up the database,
+  * mw-config/index.php: Used for web-based installation (sets up the database,
   prompts for the name of the wiki, etc.).  No command-line installation is
   currently available.
   * images/: Used for uploaded files.  This could be somewhere else if
@@ -83,13 +83,13 @@ something.  You have been warned.
 == Configuration ==
 
 MediaWiki is configured using LocalSettings.php.  This is a PHP file that's
-generated when the user visits config/index.php to install the software, and
+generated when the user visits mw-config/index.php to install the software, and
 which the user can edit by hand thereafter.  It's just a plain old PHP file,
 and can contain any PHP statements.  It usually sets global variables that are
 used for configuration, and includes files used by any extensions.
 
 Distributors cannot easily add extra statements to the autogenerated
-LocalSettings.php at the present time -- although hacking config/index.php
+LocalSettings.php at the present time -- although hacking mw-config/index.php
 would work.  It would be nice if this situation could be improved.
 
 Some configuration options that distributors might be in a position to set
