@@ -1,0 +1,4 @@
+<?php
+
+define('MW_INSTALL_PHP5_EXT', 1);
+require './index.php';
